--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,12 @@
 - MAKE BETTER 
     [ALL FUNCTIONALITY SEEMS TO BE THERE - JUST NEED TO MAKE IT SO THINGS LOAD RIGHT AWAY INSTEAD OF HAVING TO CLICK BUTTONS] 
+
+
+
+- THINK IT WOULD BE BEST IF INSTEAD OF TASKS DB 
+    - MAKE A USER DB INSTEAD AND ON CREATE ALSO CREATE A USER       
+    - HAVE AN ATTRIBUTE OF STRING ARRAY ON THERE FOR TASKS AND PUSH NEW TASKS INTO THE ARRAY INSTEAD
+    - RETURN A USER OBJECT INSTEAD AND POPULATE THE PAGE WITH EACH RETURNED USER ATTRIBUTES AND STUFF
+    ALSO 
+        - MAKE BETTER 
+            [ALL FUNCTIONALITY SEEMS TO BE THERE - JUST NEED TO MAKE IT SO THINGS LOAD RIGHT AWAY INSTEAD OF HAVING TO CLICK BUTTONS] 
