got everythign working as planned
just want to make it look better

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+- MAKE IT SO IF YOU ARE LOGGED IN IT SENDS YOU TO YOUR LIST, IF NOT BRINGS YOU TO THE SIGNIN PAGE
+
+
+
 - MAKE BETTER 
     [ALL FUNCTIONALITY SEEMS TO BE THERE - JUST NEED TO MAKE IT SO THINGS LOAD RIGHT AWAY INSTEAD OF HAVING TO CLICK BUTTONS] 
 
